--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "football-lines",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://martenfrisk.github.io/FootballLines",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -10,12 +11,19 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/recharts": "^1.8.10",
+    "gh-pages": "^3.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
-    "typescript": "~3.7.2"
+    "reaviz": "^8.1.3",
+    "recharts": "^1.8.5",
+    "typescript": "~3.7.2",
+    "victory": "^34.3.10"
   },
   "scripts": {
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
