--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "3.4.1",
     "reaviz": "^8.1.3",
     "recharts": "^1.8.5",
+    "serialize-javascript": "3.1.0",
     "typescript": "~3.7.2",
     "victory": "^34.3.10"
   },
